--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           Enjoy thrilling adventures and relax with a cup of coffee with the
           best view!
         </p>
-        <a href="#reservation" class="btn btn-primary btn-lg">Book Now</a>
+        <a href="#contact" class="btn btn-primary btn-lg">Book Now</a>
       </div>
     </section>
 
