--- a/index.html
+++ b/index.html
@@ -317,25 +317,33 @@
     </div>
 
     <!-- Virtual Tour Section -->
-    <section
-      id="virtual-tour"
-      class="py-5 bg-light parallax"
-      style="
-        background-image: url('https://images.unsplash.com/photo-1426604966848-d7adac402bff?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
-      "
-    >
-      <div class="container text-center text-white" data-aos="fade-up">
-        <h2>Experience Our 360° Virtual Tour</h2>
-        <p class="lead">
+    <section id="virtual-tour" class="py-5 bg-light text-center">
+      <div class="container" data-aos="fade-up">
+        <h2 class="text-dark mb-4">Experience Our 360° Virtual Tour</h2>
+        <p class="lead text-muted mb-5">
           Take a virtual walk around our place and discover the breathtaking
           views.
         </p>
         <div id="panorama" style="width: 100%; height: 500px"></div>
-        <a href="#reservation" class="btn btn-outline-light btn-lg mt-4"
-          >Start Virtual Tour</a
-        >
+        <a href="#reservation" class="btn btn-outline-dark btn-lg mt-4">
+          Start Virtual Tour
+        </a>
       </div>
     </section>
+
+    <!-- Optional: Marzipano or Pannellum Integration -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pannellum/2.5.6/pannellum.js"></script>
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/pannellum/2.5.6/pannellum.css"
+      rel="stylesheet"
+    />
+    <script>
+      pannellum.viewer("panorama", {
+        type: "equirectangular",
+        panorama: "https://plus.unsplash.com/premium_photo-1675827055694-010aef2cf08f?q=80&w=1912&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D", // Replace with your panorama image URL
+        autoLoad: true,
+      });
+    </script>
 
     <!-- Special Offers Section -->
     <section id="offers" class="py-5">
