--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
             <input
               type="text"
               class="form-control"
-              id="nama"
+              id="name"
               placeholder="Masukkan nama Anda"
               required
             />
@@ -580,17 +580,74 @@
             <input type="date" class="form-control" id="date" required />
           </div>
           <div class="form-group">
-            <label for="time">Waktu Reservasi<span style="color: red">*</span></label>
+            <label for="time"
+              >Waktu Reservasi<span style="color: red">*</span></label
+            >
             <input type="time" class="form-control" id="time" required />
           </div>
           <div class="form-group">
-            <label for="activity"
-              >Jenis Wisata<span style="color: red">*</span></label
+            <label>Jenis Wisata<span style="color: red">*</span></label
+            ><br />
+            <div class="form-check">
+              <input
+                type="checkbox"
+                class="form-check-input"
+                id="coffee"
+                onchange="updateCost()"
+              />
+              <label class="form-check-label" for="coffee"
+                >Coffee - Rp 50.000</label
+              >
+            </div>
+            <div
+              class="form-group"
+              id="coffeeCapacityGroup"
+              style="display: none"
             >
-            <select class="form-control" id="activity" required>
-              <option value="coffee">Coffee</option>
-              <option value="camping">Camping</option>
-            </select>
+              <label for="coffeeCapacity"
+                >Jumlah Orang untuk Coffee<span style="color: red"
+                  >*</span
+                ></label
+              >
+              <input
+                type="number"
+                class="form-control"
+                id="coffeeCapacity"
+                placeholder="Masukkan jumlah orang untuk Coffee"
+                min="1"
+                onchange="updateCost()"
+              />
+            </div>
+            <div class="form-check">
+              <input
+                type="checkbox"
+                class="form-check-input"
+                id="camping"
+                onchange="updateCost()"
+              />
+              <label class="form-check-label" for="camping"
+                >Camping - Rp 150.000</label
+              >
+            </div>
+            <div
+              class="form-group"
+              id="campingCapacityGroup"
+              style="display: none"
+            >
+              <label for="campingCapacity"
+                >Jumlah Orang untuk Camping<span style="color: red"
+                  >*</span
+                ></label
+              >
+              <input
+                type="number"
+                class="form-control"
+                id="campingCapacity"
+                placeholder="Masukkan jumlah orang untuk Camping"
+                min="1"
+                onchange="updateCost()"
+              />
+            </div>
           </div>
           <div class="form-group">
             <label for="notes">Catatan Tambahan</label>
@@ -600,6 +657,11 @@
               rows="3"
               placeholder="Masukkan catatan tambahan"
             ></textarea>
+          </div>
+          <!-- Elemen untuk menampilkan biaya -->
+          <div class="form-group">
+            <label>Total Biaya:</label>
+            <p id="costDisplay" class="font-weight-bold">Rp 0</p>
           </div>
           <!-- Tombol Submit dan Reset berdampingan -->
           <div class="d-flex gap-2">
