--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
       <!-- Paragraphs with Bootstrap Text Classes -->
       <div class="row mt-5">
-        <div class="col-md-6 ps-4">
+        <div class="col-md-6">
           <h4>Explore the Unknown</h4>
           <p class="text-muted" style="text-align: justify">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam
@@ -486,7 +486,7 @@
     <!-- CONTACT SECTION -->
     <section id="contact" class="contact-section">
       <div class="container" data-aos="fade-right">
-        <h2>Our Contact</h2>
+        <h2 class="text-center mb-4">Our Contact</h2>
         <div class="row">
           <div class="col-md-6">
             <form id="contactForm">
@@ -596,7 +596,7 @@
                 onchange="updateCost()"
               />
               <label class="form-check-label" for="coffee"
-                >Coffee - Rp 50.000</label
+                >Coffee - <i>Rp 20.000</i></label
               >
             </div>
             <div
