--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="container">
         <a class="navbar-brand ps-3" href="#">Adventure & Coffee Lounge</a>
         <button
-          class="navbar-toggler"
+          class="navbar-toggler me-2"
           type="button"
           data-toggle="collapse"
           data-target="#navbarNav"
@@ -345,6 +345,30 @@
         </div>
         <!-- Gallery Item 6 -->
         <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-right">
+          <div class="card gallery-card shadow-sm border-0">
+            <img
+              src="https://images.unsplash.com/photo-1426604966848-d7adac402bff?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              class="card-img-top gallery-img"
+              alt="Gallery Image 1"
+              data-toggle="modal"
+              data-target="#galleryModal1"
+            />
+          </div>
+        </div>
+        <!-- Gallery Item 7 -->
+        <div class="col-md-6 mb-4" data-aos="fade-right">
+          <div class="card gallery-card shadow-sm border-0">
+            <img
+              src="https://images.unsplash.com/photo-1426604966848-d7adac402bff?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              class="card-img-top gallery-img"
+              alt="Gallery Image 1"
+              data-toggle="modal"
+              data-target="#galleryModal1"
+            />
+          </div>
+        </div>
+        <!-- Gallery Item 8 -->
+        <div class="col-md-6 mb-4" data-aos="fade-right">
           <div class="card gallery-card shadow-sm border-0">
             <img
               src="https://images.unsplash.com/photo-1426604966848-d7adac402bff?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
